final/final_abodeMKE/css/main2.css
/*! HTML5 Boilerplate v5.3.0 | MIT License | https://html5boilerplate.com/ */

/*
 * What follows is the result of much research on cross-browser styling.
 * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
 * Kroc Camen, and the H5BP dev community and team.
 */

/* ==========================================================================
   Base styles: opinionated defaults
   ========================================================================== */

html {
    color: #222;
    font-size: 1em;
    line-height: 1.4;
}

/*
 * Remove text-shadow in selection highlight:
 * https://twitter.com/miketaylr/status/12228805301
 *
 * These selection rule sets have to be separate.
 * Customize the background color to match your design.
 */

::-moz-selection {
    background: #b3d4fc;
    text-shadow: none;
}

::selection {
    background: #b3d4fc;
    text-shadow: none;
}

/*
 * A better looking default horizontal rule
 */

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    margin: 1em 0;
    padding: 0;
}

/*
 * Remove the gap between audio, canvas, iframes,
 * images, videos and the bottom of their containers:
 * https://github.com/h5bp/html5-boilerplate/issues/440
 */

audio,
canvas,
iframe,
img,
svg,
video {
    vertical-align: middle;
}

/*
 * Remove default fieldset styles.
 */

fieldset {
    border: 0;
    margin: 0;
    padding: 0;
}

/*
 * Allow only vertical resizing of textareas.
 */

textarea {
    resize: vertical;
}

/* ==========================================================================
   Browser Upgrade Prompt
   ========================================================================== */

.browserupgrade {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
}

/* ==========================================================================
   Author's custom styles
   ========================================================================== */

/* ==========================================================================
   /*********** THE MAIN SITE ********/
   ========================================================================== */


@import url('https://fonts.googleapis.com/css?family=Raleway|Roboto+Condensed|Roboto:300,500,700');


* {
box-sizing: border-box;
}

body{
margin: 10px 10px 10px 10px;
background-color: white;
font-size: 16pt;
line-height: 1.2em;
font-family: 'Raleway' sans-serif;
color: dimgrey;
}

p{
font-family: 'Raleway' sans-serif;
font-size: 16px;
font-weight: none;
line-height: 1.2em;
}

h1{
font-family: 'Roboto' sans-serif;
font-size: 42px;
font-weight: 700;
}

h2{
font-family: 'Roboto' sans-serif;
font-size: 24px;
font-weight: 300;
}

h3{
font-family: 'Roboto' sans-serif;
font-weight: 500;
}

h4{
font-family: 'Roboto' sans-serif;
font-weight: 700;
font-size: 35px;
}


h5{
font-family: 'Roboto' sans-serif;
font-weight: 500;
font-size: 14px;
}

a{
color:gray;
text-decoration: none;
}

a:hover {
text-decoration: none;
color: deepskyblue;
}

img{
max-height: 250px;
}

/********* TAGLINE **********/

#title{
position:inherit;
top: 150px;
padding:50px;
margin: auto;
max-width: inherit;
}


/********* AVAILABILITY BUTTONS **********/

button{
background-color: none;
border: solid 1px;
border-color: darkgrey;
border-radius: 8px;
color: grey;
padding: 10px;
margin: 0px;
text-align: left;
text-decoration: none;
display: inline-block;
font-size: 14px;
transition-duration: 0.4s;
}

button:hover {
background-color:cornflowerblue;
color: ghostwhite;
}

/********* PAGE SECTION **********/
.houses{
    margin: 20px;
}
.houses p{
max-width: 375px
}

.houses li{
list-style: none;
}

.houses h2{
font-family: 'Roboto' sans-serif;
font-size: 32px;
font-weight: 700;

}

.houses h3{
color: cornflowerblue;
font-size: 18px;
font-weight: 700;
}

.column {
float: left;
width: 31%;
padding: 15px;
}

.row{
padding-top:50px;
}

.row:after {
content: "";
display: table;
clear: both;
}

@media (max-width:600px){
.column {
width: 95%;
margin:auto;
}
}


/********* FOOTER **********/

footer{
background-color: cornflowerblue;
color: white;
padding: 50px;
position:relative;
top: auto;
margin: auto;
text-align: center;
}

/********** THE NAVIGATION **********/

header{
margin: auto;
padding: 50px 50px 50px 50px;
background-color: #f1f1f1;
text-align:left;
}

#navmenu{
font-size:30px;
cursor:pointer;
}

.sidenav {
height: 100%;
width: 0;
position: fixed;
z-index: 1;
top: 0;
left: 0;
background-color: #111;
overflow-x: hidden;
transition: 0.5s;
padding-top: 60px;
text-align:center;
}

.sidenav a {
padding: 8px 8px 8px 32px;
text-decoration: none;
font-size: 25px;
color: #818181;
display: block;
transition: 0.3s;
}

.sidenav a:hover{
color: cornflowerblue;
}

.sidenav .closebtn {
position: absolute;
top: 0;
right: 25px;
font-size: 36px;
margin-left: 50px;
}

@media screen and (max-height: 450px) {
.sidenav {padding-top: 15px;}
.sidenav a {font-size: 18px;}
}


/************************ END ************************/

/* ==========================================================================
   Helper classes
   ========================================================================== */

/*
 * Hide visually and from screen readers
 */

.hidden {
    display: none !important;
}

/*
 * Hide only visually, but have it available for screen readers:
 * http://snook.ca/archives/html_and_css/hiding-content-for-accessibility
 */

.visuallyhidden {
    border: 0;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
}

/*
 * Extends the .visuallyhidden class to allow the element
 * to be focusable when navigated to via the keyboard:
 * https://www.drupal.org/node/897638
 */

.visuallyhidden.focusable:active,
.visuallyhidden.focusable:focus {
    clip: auto;
    height: auto;
    margin: 0;
    overflow: visible;
    position: static;
    width: auto;
}

/*
 * Hide visually and from screen readers, but maintain layout
 */

.invisible {
    visibility: hidden;
}

/*
 * Clearfix: contain floats
 *
 * For modern browsers
 * 1. The space content is one way to avoid an Opera bug when the
 *    `contenteditable` attribute is included anywhere else in the document.
 *    Otherwise it causes space to appear at the top and bottom of elements
 *    that receive the `clearfix` class.
 * 2. The use of `table` rather than `block` is only necessary if using
 *    `:before` to contain the top-margins of child elements.
 */

.clearfix:before,
.clearfix:after {
    content: " "; /* 1 */
    display: table; /* 2 */
}

.clearfix:after {
    clear: both;
}

/* ==========================================================================
   EXAMPLE Media Queries for Responsive Design.
   These examples override the primary ('mobile first') styles.
   Modify as content requires.
   ========================================================================== */

@media only screen and (min-width: 35em) {
    /* Style adjustments for viewports that meet the condition */
}

@media print,
       (-webkit-min-device-pixel-ratio: 1.25),
       (min-resolution: 1.25dppx),
       (min-resolution: 120dpi) {
    /* Style adjustments for high resolution devices */
}

/* ==========================================================================
   Print styles.
   Inlined to avoid the additional HTTP request:
   http://www.phpied.com/delay-loading-your-print-css/
   ========================================================================== */

@media print {
    *,
    *:before,
    *:after,
    *:first-letter,
    *:first-line {
        background: transparent !important;
        color: #000 !important; /* Black prints faster:
                                   http://www.sanbeiji.com/archives/953 */
        box-shadow: none !important;
        text-shadow: none !important;
    }

    a,
    a:visited {
        text-decoration: underline;
    }

    a[href]:after {
        content: " (" attr(href) ")";
    }

    abbr[title]:after {
        content: " (" attr(title) ")";
    }

    /*
     * Don't show links that are fragment identifiers,
     * or use the `javascript:` pseudo protocol
     */

    a[href^="#"]:after,
    a[href^="javascript:"]:after {
        content: "";
    }

    pre,
    blockquote {
        border: 1px solid #999;
        page-break-inside: avoid;
    }

    /*
     * Printing Tables:
     * http://css-discuss.incutio.com/wiki/Printing_Tables
     */

    thead {
        display: table-header-group;
    }

    tr,
    img {
        page-break-inside: avoid;
    }

    img {
        max-width: 100% !important;
    }

    p,
    h2,
    h3 {
        orphans: 3;
        widows: 3;
    }

    h2,
    h3 {
        page-break-after: avoid;
    }
}

